Use nord color scheme whenever possible * from this post: https://www.reddit.com/r/startpages/comments/5gjfpv/terminal_in_the_browser/

--- a/index.html
+++ b/index.html
@@ -2,48 +2,47 @@
 	<head>
 		<title>Homepage</title>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="nord.css" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 
 		<div id="container">
-			<div id="header">
-				<h3 style="display: inline;"><span class="blue"> ~ </span> <span class="pink">❯</span> <span class="green">locate</span></h3>
-				<form method="get" action="https://www.google.com/search">
-					<input type="text" autofocus="autofocus" name="q" \>
-				</form>
 
+			<div id="header">
+				<h3 style="display: inline;"><span class="nord0"> ~ </span> <span class="nord11">❯</span> <span class="nord0">locate</span></h3>
+				<form autocomplete="off" method="get" action="https://www.google.com/search">
+					<input type="text" autofocus="autofocus" name="q" />
+				</form>
 			</div>
+
 			<div id="links">
 
 				<div class="linksbox">
-					<h3><span class="blue"> ~ </span> <span class="pink">❯</span> [<span class="green">General</span>]<span class="pink">:</span> ls</h3>
-			        <a class="cyan" target="blank" href="http://stackoverflow.com/">Stack Overflow</a>
-			        <a class="red"  target="blank" href="https://shancarter.github.io/mr-data-converter/">Mr Data Converter</a>
-					<a class="red"  target="blank" href="#">Tickets</a>
-			        <a class="cyan" target="blank" href="#">Youtube</a>
-			        <a class="cyan" target="blank" href="https://github.com/">Github</a>
-					<a class="red"  target="blank" href="#">7Cav</a>
+					<h3><span class="nord0"> ~ </span> <span class="nord11">❯</span> [<span class="nord0">General</span>]<span class="nord11">:</span> ls</h3>
+					<a class="general" target="blank" href="https://www.facebook.com/">Facebook</a>
+					<a class="general" target="blank" href="https://www.youtube.com/">Youtube</a>
+					<a class="general" target="blank" href="https://www.messenger.com/">Messenger</a>
+	        <a class="general" target="blank" href="http://stackoverflow.com/">Stack Overflow</a>
+	        <a class="general" target="blank" href="https://github.com/Nihhaar">Github</a>
 				</div>
 
 				<div class="linksbox">
-					<h3><span class="blue"> ~ </span> <span class="pink">❯</span> [<span class="green">Reddit</span>]<span class="pink">:</span> ls</h3>
-			        <a class="cyan" target="blank" href="https://www.reddit.com/r/badcode">/r/badcode</a>
-			        <a class="cyan" target="blank" href="https://www.reddit.com/r/ProgrammerHumor/">/r/ProgrammerHumor</a>
-			        <a class="cyan" target="blank" href="https://www.reddit.com/r/unixporn/">/r/unixporn</a>
-					<a class="cyan" target="blank" href="https://www.reddit.com/r/talesfromtechsupport/">/r/talesfromtechsupport</a>
-					<a class="cyan" target="blank" href="https://www.reddit.com/r/EarthPorn/">/r/EarthPorn</a>
-					<a class="cyan" target="blank" href="https://www.reddit.com/r/VaporwaveAesthetics/">/r/VaporwaveAesthetics</a>
+					<h3><span class="nord0"> ~ </span> <span class="nord11">❯</span> [<span class="nord0">Reddit</span>]<span class="nord11">:</span> ls</h3>
+					<a class="reddit" target="blank" href="https://www.reddit.com/r/archlinux/">/r/ArchLinux</a>
+					<a class="reddit" target="blank" href="https://www.reddit.com/r/unixporn/">/r/unixporn</a>
+	        <a class="reddit" target="blank" href="https://www.reddit.com/r/badcode">/r/badcode</a>
+					<a class="reddit" target="blank" href="https://www.reddit.com/r/EarthPorn/">/r/EarthPorn</a>
+					<a class="reddit" target="blank" href="https://www.reddit.com/r/RocketLeague/">/r/RocketLeague</a>
 				</div>
 
 				<div class="linksbox">
-					<h3><span class="blue"> ~ </span> <span class="pink">❯</span> [<span class="green">University</span>]<span class="pink">:</span> ls</h3>
-			        <a class="red"  target="blank" href="#">Liverpool life</a>
-					<a class="red"  target="blank" href="#">Print Anywhere</a>
-			        <a class="cyan" target="blank" href="#">CS Department</a>
-					<a class="cyan" target="blank" href="#">COMP213</a>
-					<a class="cyan" target="blank" href="#">COMP201</a>
-					<a class="cyan" target="blank" href="#">COMP219</a>
+					<h3><span class="nord0"> ~ </span> <span class="nord11">❯</span> [<span class="nord0">University</span>]<span class="nord11">:</span> ls</h3>
+	        <a class="univ" target="blank" href="https://www.facebook.com/groups/1469636393334192/">CS Department</a>
+					<a class="univ" target="blank" href="#">CS604</a>
+					<a class="univ" target="blank" href="#">CS614</a>
+					<a class="univ" target="blank" href="#">CS632</a>
+					<a class="univ" target="blank" href="#">CS648</a>
 				</div>
 
 			</div>
